# INTEGRATE-Vis

./: README.md
INTEGRATE-Vis.1.0.0/: install.sh
INTEGRATE-Vis.1.0.0/data/: COHORT_NAME.expression.files.dir.tsv  COHORT_NAME.fusion.bedpe.dir.txt  COHORT_NAME.type.txt  NOTE.for.COHORT_NAME.files.txt
INTEGRATE-Vis.1.0.0/data/additional_TSV_formats_for_PD_gene_expression/: README.md
INTEGRATE-Vis.1.0.0/data/gene_model/: README.md
INTEGRATE-Vis.1.0.0/data/ideogram/: Ideogram.37.tsv  Ideogram.38.tsv
INTEGRATE-Vis.1.0.0/data/reference_genome/: README.md
INTEGRATE-Vis.1.0.0/src/: Integrate-vis.py  domain_table.prep.py  gene_list.py  geneclass.py  pa.py  pb.py  pc.py  pd.py  pd_expression_converter.py  pd_fusion_converter.py  pd_sub.py  pe.py  readsNum_getter.py  vis_a_structure.py  vis_b_domain.py  vis_c_exon_exp.py  vis_d_gene_exp.py  vis_e_fcirc.py
docker/: Dockerfile
example/Example1/: all.exp.dir.tsv  all.fusion.bedpe.dir.tsv  simulated.TCGA-ZG-A8QZ-01.bam  simulated.TCGA-ZG-A8QZ-01.bam.bai
example/Example1/TCGA_PRAD_333_FeatureCounts_tsv/: README.md  TCGA-2A-A8VL-01.tsv  TCGA-2A-A8VO-01.tsv  TCGA-2A-A8VT-01.tsv  TCGA-2A-A8VV-01.tsv  TCGA-2A-A8W1-01.tsv  TCGA-2A-A8W3-01.tsv  TCGA-CH-5737-01.tsv  TCGA-CH-5738-01.tsv  TCGA-CH-5739-01.tsv  (+324 more)
example/Example2/evaluation/Evaluator/src/: Bed2SetPair.cpp  Bed2SetPair.h  BedCompare.cpp  BedCompare.h  Bedpe.cpp  Bedpe.h  CMakeLists.txt  ExecuteByRule.cpp  ExecuteByRule.h  Gene2.cpp  Gene2.h  MyTypes.h  Printer.cpp  Printer.h  SetPair.cpp  SetPair.h  main.cpp
example/Example3/: example.fcirc.txt
(+690 files in other folders)
